spacing fix

--- a/wp-content/plugins/ra7-helper-plugin/blocks/fr-qc-worldwide-slider/block.css
+++ b/wp-content/plugins/ra7-helper-plugin/blocks/fr-qc-worldwide-slider/block.css
@@ -8,6 +8,7 @@
   list-style: none;
   padding-left: 0;
   margin-left: 0;
+  height: 450px;
 }
 
 .fr-qc-worldwide-slider-title {
